<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.blockchain</groupId>
    <artifactId>tools</artifactId>
    <version>1.0</version>
    <name>blockchain-tools</name>
    <description>Tools for blockchain address management</description>
    <url>https://github.com/sliard/blockchain-tools</url>

    <issueManagement>
        <url>https://github.com/sliard/blockchain-tools/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <scm>
        <url>https://github.com/sliard/blockchain-tools</url>
        <connection>scm:git:git@github.com:sliard/blockchain-tools.git</connection>
        <developerConnection>scm:git:git@github.com:sliard/blockchain-tools.git</developerConnection>
        <tag>master</tag>
    </scm>

    <developers>
        <developer>
            <id>sliard</id>
            <name>Samuel Liard</name>
            <email>samuel@liard.me</email>
            <url>https://linkedin.com/in/samuelliard</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://spdx.org/licenses/MIT#licenseText</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.11</version>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk16</artifactId>
            <version>1.46</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>